examples/conformance/valid/valid_handoff_and_rework_coexist.flo
spec_version: "0.1"

process:
  id: valid_handoff_and_rework_coexist
  name: Valid Handoff And Rework Coexist

items:
  - id: submission
    name: Submission
    kind: information

resources:
  - id: reviewer
    name: Reviewer
    kind: person
  - id: editor
    name: Editor
    kind: person

steps:
  - id: start
    kind: start

  - id: review
    kind: task
    consumes: [submission]
    produces: [submission]
    performed_by: [reviewer]

  - id: decision
    kind: decision
    outcomes:
      approved: finalize
      revise: rework

  - id: rework
    kind: task
    consumes: [submission]
    produces: [submission]
    performed_by: [editor]

  - id: finalize
    kind: task
    consumes: [submission]
    performed_by: [reviewer]

  - id: end
    kind: end

transitions:
  - source: start
    target: review
  - source: review
    target: decision
  - source: decision
    target: finalize
    outcome: approved
    handoff: true
  - source: decision
    target: rework
    outcome: revise
    edge_type: rework
    rework: true
  - source: rework
    target: review
    edge_type: rework
    rework: true
  - source: finalize
    target: end